# eyasdp

./: AUTHORS  CMakeLists.txt  ChangeLog  INSTALL  README.md  TODO  eyasdp.kdev4  install.sh  plasma-applet-eyasdp.desktop  plasma-eyasdp-1.2.0.ebuild  plasma-eyasdp.cpp  plasma-eyasdp.ebuild  plasma-eyasdp.h
translations/: CMakeLists.txt  de.po  el.po  es.po  extract-and-merge-messages.sh  eyasdp.pot  fr.po  it.po  ru.po  ua.po
ui/: AppearanceConfig.ui
